# fastapi_play

./: Dockerfile  Dockerfile-prod  Dockerfile-test  Dockerfile.granian  Dockerfile.uvicorn  README.md  docker-compose.yml  run-docker.sh
.github/workflows/: python-app.yml
api/: environment-prod.yml  environment-test.yml  environment.yml  github-pipeline-requirements.txt  pyproject.toml  run_server.sh  run_server_in_docker.sh
api/api/: api_app.py  fastapi_app.py  log_config.ini  server.py
api/test/: test_fastapi_app.py  test_server.py
