[project]
name = "fastapi_play_uvicorn"
version = "0.1.0"
description = "Simple FastAPI app running in uvicorn and gunicorn"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">=3.11.5"
dependencies = [
    "fastapi>=0.103.1",
    "starlette>=0.22.0",
    "uvicorn>=0.23.2",
    "requests>=2.31.0",
    "httpx>=0.23.1",
    "gunicorn>=21.2.0"
]
